🚧 feat: Implementando o card do game

--- a/src/app/components/game-card/game-image/game-image.component.html
+++ b/src/app/components/game-card/game-image/game-image.component.html
@@ -1,1 +1,12 @@
-<p>game-image works!</p>
+<div 
+    class="card-image" 
+    (mouseenter)="onMouseEnter()" 
+    (mouseleave)="onMouseLeave()"
+>
+    <img 
+        class="image"
+        [src]="imagePath"
+        alt=""
+    >
+    <div *ngIf="gameFooter" class="start-game">Start Game</div>
+</div>
