🚧 feat: Implementando fundo da psn

--- a/src/app/components/game-card/game-image/game-image.component.html
+++ b/src/app/components/game-card/game-image/game-image.component.html
@@ -8,5 +8,5 @@
         [src]="imagePath"
         alt=""
     >
-    <div *ngIf="gameFooter" class="start-game">Start Game</div>
+    <div *ngIf="gameFooter" class="start-game">Iniciar</div>
 </div>
