--- a/src/app/components/game-card/game-image/game-image.component.css
+++ b/src/app/components/game-card/game-image/game-image.component.css
@@ -3,8 +3,8 @@
     width: 12rem;
     height: 13rem;
     display: flex;
-    margin-top: 2rem;
-    overflow: visible; /* Permite que a imagem se expanda sem cortar o conteúdo */
+    /* margin-top: 2rem; */
+    overflow: visible; 
 }
 
 .card-image img {
