--- a/src/app/components/game-card/game-card.component.html
+++ b/src/app/components/game-card/game-card.component.html
@@ -1,1 +1,12 @@
-<app-game-image></app-game-image>
+<div 
+    class="card-image" 
+    (mouseenter)="onMouseEnter()" 
+    (mouseleave)="onMouseLeave()"
+>
+    <img 
+        class="image"
+        [src]="imagePath"
+        alt=""
+    >
+    <div *ngIf="gameFooter" class="start-game">Iniciar</div>
+</div>
