--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
-body{
+/* body{
     margin: 0;
     padding: 0;
     background-image: url(assets/backgroundPS4.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     z-index: 10;
-}
+} */
