--- a/src/app/components/game-card/game-card.component.css
+++ b/src/app/components/game-card/game-card.component.css
@@ -14,7 +14,7 @@
 .card-image {
     position: relative;
     width: 100%;
-    height: 15rem;
+    height: 65%;
     top: 0; 
     left: 0;
     transition: transform 0.8s;
@@ -27,8 +27,6 @@
 .card-image:hover {
     transform: scale(1.15);
 }
-
-
 
 
 .card-image img {
@@ -44,7 +42,7 @@
     left: 50%; 
     transform: translateX(-50%); 
     width: 100%; 
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.8);
     color: white;
     text-align: center; 
     padding: 0.5rem; 
@@ -61,8 +59,10 @@
 
 .game-options {
   position: absolute;
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  height: 7.4rem;
+  height: 28.5%;
   background-color: green;
   bottom: 0;
   left: 0;
@@ -76,6 +76,7 @@
   transform: scale(1.15);
   opacity: 1;
 }
+
 
 
 
